# vibe-full-stack

./: Overview.md
cline-vibe/server/: app.py  main.py  pyproject.toml  test.py
cline-vibe/server/api/: auth_api.py  flight_api.py  rocket_api.py  rocket_statemachine.py
cline-vibe/server/core/: config.py  database.py
cline-vibe/server/db_models/: enums.py  flight_orm.py  rocket_orm.py  user_orm.py
cline-vibe/server/models/: auth.py  rocket.py  rocket_job.py
cline-vibe/server/requirements/: database_requirements.md
cline-vibe/server/routes/: auth_router.py  rocket_router.py
server/: .env-template  README.md  Requirements.md  app.py  pyproject.toml  requirements.txt  test.py
server/api/: auth.py  dependencies.py  jobs.py  websockets.py
server/core/: config.py  security.py
server/models/: __init__.py  enums.py  job_history.py  rocket_job.py  user.py
server/schemas/: __init__.py  rocket_job.py
server/services/: airflow_service.py  airflow_service2.py  rocket_service.py
